examples/datalog/14_aggregations/82_avg_int.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_avg_int
Knowledge graph 'test_avg_int' created.
Switched to knowledge graph: test_avg_int
> .kg use test_avg_int
Switched to knowledge graph: test_avg_int
> +scores[(10,), (20,), (30,), (40,)].
Inserted 4 fact(s) into 'scores'.
> +average(<AVG:S>) :- scores(S).
Script error: Parse error: Invalid term: '<AVG:S>'
